--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+src/main/java/invest_prodj/Key.java
+src/main/resources/hibernate.cfg.xml
 *.iws
 *.iml
 *.ipr
